[gd_scene load_steps=4 format=2]

[ext_resource path="res://prefab/HUD/StatusBars.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/HUD/HUD.gd" type="Script" id=2]
[ext_resource path="res://prefab/HUD/PauseScreen.tscn" type="PackedScene" id=3]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PauseScreen" parent="." instance=ExtResource( 3 )]
visible = false

[node name="StatusBars" parent="." instance=ExtResource( 1 )]

[node name="PlayerInventory" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -110.0
margin_bottom = 76.0
